# ESP32_Learning

./: LearningList.md  README.md
02.idf_basis/blink_component/main/: blink_example_main.c
02.idf_basis/blink_menuconfig/main/: Kconfig.projbuild
02.idf_basis/button_component/: .gitignore
02.idf_basis/button_component/main/: blink_example_main.c
02.idf_basis/lvgl_component/: partitions.csv
02.idf_basis/lvgl_component/main/: idf_component.yml  lvgl_component.c
03.peripheral/adc_continuous/: CMakeLists.txt
03.peripheral/adc_continuous/main/: CMakeLists.txt  adc_continuous.c
03.peripheral/adc_oneshot/: CMakeLists.txt
03.peripheral/adc_oneshot/main/: CMakeLists.txt  adc_oneshot.c
03.peripheral/dac_cosine/: CMakeLists.txt
03.peripheral/dac_cosine/main/: CMakeLists.txt  dac_cosine.c
03.peripheral/dac_oneshot/: CMakeLists.txt
03.peripheral/gpio_exit/: CMakeLists.txt
03.peripheral/gptimer/: CMakeLists.txt
03.peripheral/i2c_bh1750/: CMakeLists.txt
03.peripheral/led_pwm/: CMakeLists.txt
03.peripheral/uart/: CMakeLists.txt
04.storage/flash_fatfs/: CMakeLists.txt  partitions.csv
04.storage/flash_spiffs/: CMakeLists.txt  partitions.csv
04.storage/nvs/: CMakeLists.txt
04.storage/partition/: CMakeLists.txt  partitions.csv
04.storage/sdmmc/main/: CMakeLists.txt  main.c
05.wifi/wifi_sta/: .gitignore
07.system/base_mac_address/: CMakeLists.txt
08.gui/lvgl_component/: CMakeLists.txt
09.gui/lvgl_transplant_spd2010/: CMakeLists.txt
docs/: ESP32学习计划.md  IDF常用指令.md
docs/02.从ESP32点灯程序认识ESP-IDF代码结构/: 从ESP32点灯程序认识ESP-IDF代码结构.md
(+77 files in other folders)
